# snapchat-export-organizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows.yml
.manual_smoke3/video_export/: metadata.json
.pytest_tmp_progress/test_analyze_sources_ready_fro0/sample_export/: metadata.json
.pytest_tmp_progress/test_job_events_include_progre0/progress_export/: metadata.json
.pytest_tmp_progress/test_summary_endpoint_blocks_s0/reconciliation_issue_export/: metadata.json
.pytest_tmp_progress/test_summary_endpoint_from_fol0/summary_export/: summary.json
.pytest_tmp_verify/test_analyze_sources_matches_j0/metadata_export/: metadata.json
.pytest_tmp_verify/test_process_video_sources_fro1/sample_video_export/: metadata.json
.single_output_smoke3/image_export/: metadata.json
scripts/: build.ps1
src/snapchat_export_organizer/: __init__.py  app.py  cli.py  dialogs.py  gui.py  launcher.py  models.py  pipeline.py  web.py
tests/: conftest.py  test_pipeline.py  test_web_api.py
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.jsx  styles.css
