[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snapchat-export-organizer"
version = "0.1.0"
description = "Windows desktop app for rebuilding Snapchat Memories exports with overlays and EXIF metadata."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "piexif>=1.1.3",
]

[project.scripts]
snapchat-export-organizer = "snapchat_export_organizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

